# gaphor-autolayout

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
gaphor-autolayout/tests/: test_elklayout.py
gaphor_autolayout/: __init__.py  autolayoutelk.py  elkrunner.js
gaphor_autolayout/ui/: elk_properties_dialog.ui
tests/: test_elklayout.py  test_service_actions.py
