[project]
name = "gaphor-autolayout"
version = "0.1.0"
description = "Auto layout diagrams using ELK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.entry-points."gaphor.services"]
"ELK_autolayout" = "gaphor_autolayout.autolayoutelk:AutoLayoutELKService"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
]

[tool.poetry]
include = [{path = "gaphor_autolayout/elkrunner.js", format = ["sdist", "wheel"]}]

[dependency-groups]
dev = [
    "gaphor>=3.0.0",
    "pytest>=8.3.4",
]
